--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libgit2 (1.5.1+ds-1pexip1) pexip; urgency=medium
+
+  * New upstream release
+
+ -- Huw Jones <huw@pexip.com>  Mon, 13 Mar 2023 14:56:55 +0000
+
 libgit2 (1.5.1+ds-1) unstable; urgency=high
 
   * Team upload.
